# Hackathon-Squad

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  report.docx
tests/: gen.py  test1.txt  test1_expected.txt  test2.txt  test2_expected.txt  test3.txt  test4.txt
